--- a/Index.html
+++ b/Index.html
@@ -30,7 +30,7 @@
     <!-- Hero Section -->
     <header class="bg-primary text-white text-center py-5">
         <div class="container">
-            <h1>Welcome to Bad Hotel Dirty</h1>
+            <h1>Welcome to MyHotel</h1>
             <p class="lead">Your comfort is our priority</p>
         </div>
     </header>
